# cargo-fel4

./: .gitignore  Cargo.toml  DEPENDENCIES.md  LICENSE  README.md  README.rx  build.rs
cmake_config/: Cargo.toml
cmake_config/src/: lib.rs
cmake_config/tests/: CMakeCache_tiny.txt  integration.rs
configs/: fel4.toml
cucumber/: new.feature
res/test/: Cargo.toml
src/: build_cmd.rs  clean_cmd.rs  cmake_codegen.rs  command_ext.rs  common.rs  config.rs  cpio.rs  deploy_cmd.rs  generator.rs  lib.rs  main.rs  new_cmd.rs  simulate_cmd.rs  test_cmd.rs
src/asm/: aarch64.s  arm.s  x86.s  x86_64.s
target_specs/: README.md  arm-sel4-fel4.json
templates/: Cargo.toml  Cargo.toml.part  Xargo.toml  fel4_test.rs  lib.rs
tests/: basic_integration.rs
