[package]
name = "cargo-fel4"
version = "0.0.1"
publish = false

[dependencies]
cmake_config = { version = "*", path = "cmake_config" }
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
cargo_metadata = "0.5"
toml = "0.4"
log = "0.4"
colored = "1.6"
package-config = {git = "ssh://github.com/PolySync/fel4-dependencies.git", branch = "devel"}
