[package]
name = "cargo-fel4"
version = "0.0.1"
publish = false
build = "build.rs"

[dependencies]
cmake_config = { version = "*", path = "cmake_config" }
docopt = "0.8"
heck = "0.3" # Can remove once we transition libsel4-sys' debug feature flag to non-shouty
serde = "1.0"
serde_derive = "1.0"
cargo_metadata = "0.5"
toml = "0.4"
log = "0.4"
colored = "1.6"
