[package]
name = "cargo-fel4"
version = "0.7.0"
publish = false
authors = ["Jon Lamb <jlamb@polysync.io>", "Zachary Pierce <zpierce@polysync.io>", "Dan Pittman <dpittman@polysync.io>"]

[dependencies]
cargo_metadata = "0.5"
cmake_config = { version = "*", path = "cmake_config" }
colored = "1.6"
fel4-config = { git = "https://github.com/PolySync/fel4-config.git", branch = "master" }
log = "0.4"
structopt = "0.2"

[dev-dependencies]
proptest = "0.7"
tempfile = "3"
lazy_static = "1.0"
